<resources>
    <string name="app_name">Iset\'Comians</string>
    <string name="student_id">Student ID</string>
    <string name="password">Password</string>
    <string name="isetcomlogo" translatable="false">Isetcomlogo</string>
    <string name="isetcomianslogo" translatable="false">Isetcomianslogo</string>
    <string name="connect_using_iset_comians_account">Connect Using Iset\'Comians account</string>
    <string name="log_in">Log in</string>
    <string name="loggingin">Logging In</string>
    <string name="defaultbluewall">defaultbluewall</string>
</resources>